# nonogram

./: .clangd  .gitignore  README.md  nob.c  nob.h  start-server.sh
Solver/: Solver.cabal
Solver/app/: Board.hs  Main.hs  Memo.hs  Solver.hs
include/: board.h  da.h
solver/: dot.pl  server.pl  solver.pl  start-server.sh
src/: board.c  board.h  client.c  client.h  game.c  game.h  main.c
